--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -1,9 +1,22 @@
 \section{Introduction}
 \label{sec:introduction}
 
-Introduction and motivation.
+Introduction and motivation, including initial examples.
 
-Initial examples.
+What are we trying to tell the reader?  (Ideally, we'd concentrate on just one or two themes)
+\begin{itemize}
+\item Here's why you'll want to use the RZ tool
+\item Here's a cool application of some theoretical results.
+\item Here's why realizability interpretations
+  are important.
+\item Here are the practical issues involved in computing realizability
+  interpretations.
+\item Here's the history of the development of RZ
+\item \ldots
+\end{itemize}
+
+
+
 
 %%% Local Variables: 
 %%% mode: latex
